pythonShell/src/parser_package/ManualParsingGrammarParser.py
# Generated from D:/Programming/comp0010-shell-python-p28/src/parser_package/ManualParsingGrammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class ManualParsingGrammarParser(Parser):
    grammarFileName = "ManualParsingGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'echo'",
        "'pwd'",
        "'cd'",
        "'head'",
        "'cat'",
        "'ls'",
        "'tail'",
        "'grep'",
        "'sort'",
        "'cut'",
        "'find'",
        "'uniq'",
        "'_echo'",
        "'_pwd'",
        "'_cd'",
        "'_head'",
        "'_cat'",
        "'_ls'",
        "'_tail'",
        "'_grep'",
        "'_sort'",
        "'_cut'",
        "'_find'",
        "'_uniq'",
        "<INVALID>",
        "<INVALID>",
        "' '",
        "<INVALID>",
        "'\\\"'",
        "'|'",
        "'`'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "DOUBLE_QUOTE_STRING",
        "SINGLE_QUOTE_STRING",
        "SPACE",
        "NON_QUOTE",
        "ESCAPED_QUOTE",
        "PIPE",
        "SUBSTITUTION",
        "WS",
    ]

    RULE_parse = 0
    RULE_pipeStatement = 1
    RULE_callStatement = 2
    RULE_args = 3
    RULE_argsForSub = 4
    RULE_substitutionStatement = 5
    RULE_statement = 6
    RULE_app = 7
    RULE_fileName = 8
    RULE_string = 9

    ruleNames = [
        "parse",
        "pipeStatement",
        "callStatement",
        "args",
        "argsForSub",
        "substitutionStatement",
        "statement",
        "app",
        "fileName",
        "string",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    DOUBLE_QUOTE_STRING = 25
    SINGLE_QUOTE_STRING = 26
    SPACE = 27
    NON_QUOTE = 28
    ESCAPED_QUOTE = 29
    PIPE = 30
    SUBSTITUTION = 31
    WS = 32

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ParseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ManualParsingGrammarParser.EOF, 0)

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    ManualParsingGrammarParser.StatementContext
                )
            else:
                return self.getTypedRuleContext(
                    ManualParsingGrammarParser.StatementContext, i
                )

        def getRuleIndex(self):
            return ManualParsingGrammarParser.RULE_parse

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParse"):
                listener.enterParse(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParse"):
                listener.exitParse(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParse"):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)

    def parse(self):
        localctx = ManualParsingGrammarParser.ParseContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.statement()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (
                    (((_la) & ~0x3F) == 0 and ((1 << _la) & 4328521726) != 0)
                ):
                    break

            self.state = 25
            self.match(ManualParsingGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PipeStatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PIPE(self, i: int = None):
            if i is None:
                return self.getTokens(ManualParsingGrammarParser.PIPE)
            else:
                return self.getToken(ManualParsingGrammarParser.PIPE, i)

        def callStatement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    ManualParsingGrammarParser.CallStatementContext
                )
            else:
                return self.getTypedRuleContext(
                    ManualParsingGrammarParser.CallStatementContext, i
                )

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(ManualParsingGrammarParser.WS)
            else:
                return self.getToken(ManualParsingGrammarParser.WS, i)

        def substitutionStatement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    ManualParsingGrammarParser.SubstitutionStatementContext
                )
            else:
                return self.getTypedRuleContext(
                    ManualParsingGrammarParser.SubstitutionStatementContext, i
                )

        def app(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    ManualParsingGrammarParser.AppContext
                )
            else:
                return self.getTypedRuleContext(
                    ManualParsingGrammarParser.AppContext, i
                )

        def getRuleIndex(self):
            return ManualParsingGrammarParser.RULE_pipeStatement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPipeStatement"):
                listener.enterPipeStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPipeStatement"):
                listener.exitPipeStatement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPipeStatement"):
                return visitor.visitPipeStatement(self)
            else:
                return visitor.visitChildren(self)

    def pipeStatement(self):
        localctx = ManualParsingGrammarParser.PipeStatementContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 2, self.RULE_pipeStatement)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 1, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 27
                    self.match(ManualParsingGrammarParser.WS)
                self.state = 32
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 1, self._ctx)

            self.state = 35
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.state = 33
                self.callStatement()
                pass

            elif la_ == 2:
                self.state = 34
                self.substitutionStatement()
                pass

            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 32:
                self.state = 37
                self.match(ManualParsingGrammarParser.WS)
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self.match(ManualParsingGrammarParser.PIPE)
            self.state = 47
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 4, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 44
                    self.match(ManualParsingGrammarParser.WS)
                self.state = 49
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 4, self._ctx)

            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 6, self._ctx)
            if la_ == 1:
                self.state = 50
                self.callStatement()
                pass

            elif la_ == 2:
                self.state = 51
                self.app()
                self.state = 55
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 5, self._ctx)
                while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 52
                        self.match(ManualParsingGrammarParser.WS)
                    self.state = 57
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(
                        self._input, 5, self._ctx
                    )

                self.state = 58
                self.substitutionStatement()
                pass

            self.state = 65
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 7, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 62
                    self.match(ManualParsingGrammarParser.WS)
                self.state = 67
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 7, self._ctx)

            self.state = 81
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 10, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 79
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [30]:
                        self.state = 68
                        self.match(ManualParsingGrammarParser.PIPE)
                        self.state = 69
                        self.callStatement()
                        pass
                    elif token in [
                        1,
                        2,
                        3,
                        4,
                        5,
                        6,
                        7,
                        8,
                        9,
                        10,
                        11,
                        12,
                        13,
                        14,
                        15,
                        16,
                        17,
                        18,
                        19,
                        20,
                        21,
                        22,
                        23,
                        24,
                    ]:
                        self.state = 70
                        self.app()
                        self.state = 74
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(
                            self._input, 8, self._ctx
                        )
                        while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                            if _alt == 1:
                                self.state = 71
                                self.match(ManualParsingGrammarParser.WS)
                            self.state = 76
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(
                                self._input, 8, self._ctx
                            )

                        self.state = 77
                        self.substitutionStatement()
                        pass
                    else:
                        raise NoViableAltException(self)

                self.state = 83
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 10, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CallStatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def app(self):
            return self.getTypedRuleContext(
                ManualParsingGrammarParser.AppContext, 0
            )

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(ManualParsingGrammarParser.WS)
            else:
                return self.getToken(ManualParsingGrammarParser.WS, i)

        def args(self):
            return self.getTypedRuleContext(
                ManualParsingGrammarParser.ArgsContext, 0
            )

        def getRuleIndex(self):
            return ManualParsingGrammarParser.RULE_callStatement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterCallStatement"):
                listener.enterCallStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitCallStatement"):
                listener.exitCallStatement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCallStatement"):
                return visitor.visitCallStatement(self)
            else:
                return visitor.visitChildren(self)

    def callStatement(self):
        localctx = ManualParsingGrammarParser.CallStatementContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 4, self.RULE_callStatement)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 32:
                self.state = 84
                self.match(ManualParsingGrammarParser.WS)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.app()
            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 12, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 91
                    self.match(ManualParsingGrammarParser.WS)
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 12, self._ctx)

            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and ((1 << _la) & 503316480) != 0:
                self.state = 97
                self.args()

            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 14, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 100
                    self.match(ManualParsingGrammarParser.WS)
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 14, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    ManualParsingGrammarParser.StringContext
                )
            else:
                return self.getTypedRuleContext(
                    ManualParsingGrammarParser.StringContext, i
                )

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(ManualParsingGrammarParser.WS)
            else:
                return self.getToken(ManualParsingGrammarParser.WS, i)

        def getRuleIndex(self):
            return ManualParsingGrammarParser.RULE_args

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterArgs"):
                listener.enterArgs(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitArgs"):
                listener.exitArgs(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitArgs"):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)

    def args(self):
        localctx = ManualParsingGrammarParser.ArgsContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 6, self.RULE_args)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.string()
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 15, self._ctx)
                while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 107
                        self.match(ManualParsingGrammarParser.WS)
                    self.state = 112
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(
                        self._input, 15, self._ctx
                    )

                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (
                    (((_la) & ~0x3F) == 0 and ((1 << _la) & 503316480) != 0)
                ):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgsForSubContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    ManualParsingGrammarParser.StringContext
                )
            else:
                return self.getTypedRuleContext(
                    ManualParsingGrammarParser.StringContext, i
                )

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(ManualParsingGrammarParser.WS)
            else:
                return self.getToken(ManualParsingGrammarParser.WS, i)

        def getRuleIndex(self):
            return ManualParsingGrammarParser.RULE_argsForSub

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterArgsForSub"):
                listener.enterArgsForSub(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitArgsForSub"):
                listener.exitArgsForSub(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitArgsForSub"):
                return visitor.visitArgsForSub(self)
            else:
                return visitor.visitChildren(self)

    def argsForSub(self):
        localctx = ManualParsingGrammarParser.ArgsForSubContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 8, self.RULE_argsForSub)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 117
                self.string()
                self.state = 121
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 17, self._ctx)
                while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 118
                        self.match(ManualParsingGrammarParser.WS)
                    self.state = 123
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(
                        self._input, 17, self._ctx
                    )

                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (
                    (((_la) & ~0x3F) == 0 and ((1 << _la) & 503316480) != 0)
                ):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubstitutionStatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def app(self):
            return self.getTypedRuleContext(
                ManualParsingGrammarParser.AppContext, 0
            )

        def SUBSTITUTION(self, i: int = None):
            if i is None:
                return self.getTokens(ManualParsingGrammarParser.SUBSTITUTION)
            else:
                return self.getToken(
                    ManualParsingGrammarParser.SUBSTITUTION, i
                )

        def statement(self):
            return self.getTypedRuleContext(
                ManualParsingGrammarParser.StatementContext, 0
            )

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(ManualParsingGrammarParser.WS)
            else:
                return self.getToken(ManualParsingGrammarParser.WS, i)

        def args(self):
            return self.getTypedRuleContext(
                ManualParsingGrammarParser.ArgsContext, 0
            )

        def argsForSub(self):
            return self.getTypedRuleContext(
                ManualParsingGrammarParser.ArgsForSubContext, 0
            )

        def getRuleIndex(self):
            return ManualParsingGrammarParser.RULE_substitutionStatement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSubstitutionStatement"):
                listener.enterSubstitutionStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSubstitutionStatement"):
                listener.exitSubstitutionStatement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSubstitutionStatement"):
                return visitor.visitSubstitutionStatement(self)
            else:
                return visitor.visitChildren(self)

    def substitutionStatement(self):
        localctx = ManualParsingGrammarParser.SubstitutionStatementContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 10, self.RULE_substitutionStatement)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 32:
                self.state = 128
                self.match(ManualParsingGrammarParser.WS)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.app()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and ((1 << _la) & 503316480) != 0:
                self.state = 135
                self.args()

            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 32:
                self.state = 138
                self.match(ManualParsingGrammarParser.WS)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(ManualParsingGrammarParser.SUBSTITUTION)
            self.state = 148
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 22, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 145
                    self.match(ManualParsingGrammarParser.WS)
                self.state = 150
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 22, self._ctx)

            self.state = 151
            self.statement()
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 32:
                self.state = 152
                self.match(ManualParsingGrammarParser.WS)
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self.match(ManualParsingGrammarParser.SUBSTITUTION)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and ((1 << _la) & 503316480) != 0:
                self.state = 160
                self.argsForSub()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def callStatement(self):
            return self.getTypedRuleContext(
                ManualParsingGrammarParser.CallStatementContext, 0
            )

        def pipeStatement(self):
            return self.getTypedRuleContext(
                ManualParsingGrammarParser.PipeStatementContext, 0
            )

        def substitutionStatement(self):
            return self.getTypedRuleContext(
                ManualParsingGrammarParser.SubstitutionStatementContext, 0
            )

        def getRuleIndex(self):
            return ManualParsingGrammarParser.RULE_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStatement"):
                listener.enterStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStatement"):
                listener.exitStatement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStatement"):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)

    def statement(self):
        localctx = ManualParsingGrammarParser.StatementContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 25, self._ctx)
            if la_ == 1:
                self.state = 163
                self.callStatement()
                pass

            elif la_ == 2:
                self.state = 164
                self.pipeStatement()
                pass

            elif la_ == 3:
                self.state = 165
                self.substitutionStatement()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AppContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return ManualParsingGrammarParser.RULE_app

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterApp"):
                listener.enterApp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitApp"):
                listener.exitApp(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitApp"):
                return visitor.visitApp(self)
            else:
                return visitor.visitChildren(self)

    def app(self):
        localctx = ManualParsingGrammarParser.AppContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 14, self.RULE_app)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 33554430) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FileNameContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(
                ManualParsingGrammarParser.StringContext, 0
            )

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(ManualParsingGrammarParser.WS)
            else:
                return self.getToken(ManualParsingGrammarParser.WS, i)

        def getRuleIndex(self):
            return ManualParsingGrammarParser.RULE_fileName

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFileName"):
                listener.enterFileName(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFileName"):
                listener.exitFileName(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFileName"):
                return visitor.visitFileName(self)
            else:
                return visitor.visitChildren(self)

    def fileName(self):
        localctx = ManualParsingGrammarParser.FileNameContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 16, self.RULE_fileName)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 32:
                self.state = 170
                self.match(ManualParsingGrammarParser.WS)
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 176
            self.string()
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 32:
                self.state = 177
                self.match(ManualParsingGrammarParser.WS)
                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StringContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NON_QUOTE(self, i: int = None):
            if i is None:
                return self.getTokens(ManualParsingGrammarParser.NON_QUOTE)
            else:
                return self.getToken(ManualParsingGrammarParser.NON_QUOTE, i)

        def DOUBLE_QUOTE_STRING(self):
            return self.getToken(
                ManualParsingGrammarParser.DOUBLE_QUOTE_STRING, 0
            )

        def SINGLE_QUOTE_STRING(self):
            return self.getToken(
                ManualParsingGrammarParser.SINGLE_QUOTE_STRING, 0
            )

        def SPACE(self):
            return self.getToken(ManualParsingGrammarParser.SPACE, 0)

        def getRuleIndex(self):
            return ManualParsingGrammarParser.RULE_string

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterString"):
                listener.enterString(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitString"):
                listener.exitString(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitString"):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)

    def string(self):
        localctx = ManualParsingGrammarParser.StringContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 18, self.RULE_string)
        try:
            self.state = 191
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                self.enterOuterAlt(localctx, 1)
                self.state = 184
                self._errHandler.sync(self)
                _alt = 1
                while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 183
                        self.match(ManualParsingGrammarParser.NON_QUOTE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 186
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(
                        self._input, 28, self._ctx
                    )

                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 188
                self.match(ManualParsingGrammarParser.DOUBLE_QUOTE_STRING)
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 3)
                self.state = 189
                self.match(ManualParsingGrammarParser.SINGLE_QUOTE_STRING)
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 4)
                self.state = 190
                self.match(ManualParsingGrammarParser.SPACE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
